* Let default function invocation work in case of proxied sub-interfaces. Relates to #31